# ros-cam-pub

./: .gitignore  CMakeLists.txt  package.xml
include/: ImageViewer.hpp  V4LInterface.hpp  baop.hpp  func_obj.hpp  matrix.hpp  vcap.hpp
launch/: cam_config.launch  cam_mono_pub.launch  cam_stereo_pub.launch
src/: cam_config.json  cam_config_node.cpp  cam_config_stereo.json  cam_pub_node.cpp  stereo.yaml
src/utils/: mem.hpp  msg.h
src/vcap/: V4LInterface-aux.cpp  V4LInterface-events.cpp  device.cpp  device.hpp  vcap.cpp
